--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,8 +1,12 @@
 // Variables
-$background-colour: #fff;
-$primary-colour: #a8575e;
-$secondary-colour: #57a8a1;
-$dark-colour: #24292e;
-$light-colour: #f3f3f3;
+$background-color: #fff;
+$background-color-gray: #f9f9f9;
+$primary-color: #26a8da;
+$lighter-primary-color: #52b9e154;
+$secondary-color: #DA5826;
+$dark-color: #24292e;
+$light-color: #f3f3f3;
 $max-width: 1280px;
-$font-fam: "Work Sans", sans-serif;
+$font-fam: "Work Sans",
+sans-serif;
+$border-input: 1px solid #d1d5da;
