--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,235 +1,220 @@
 // Reset
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 @import "config";
 @import "utilities";
-
+@import "cards-programs";
+@import "program";
+@import "forms";
 // Main Styling
-
 body,
 html {
-  background: $background-colour;
-  font-family: $font-fam;
-  color: #333333;
+    background: $background-color;
+    font-family: $font-fam;
+    color: #333333;
 }
 
 ul {
-  list-style: none;
+    list-style: none;
 }
 
 a {
-  text-decoration: none;
-  color: #ffffff;
+    text-decoration: none;
 }
 
 img {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 input[type="text"] {
-  font-size: 1.3rem;
-  padding: 0.2rem 1rem;
+    font-size: 1.3rem;
+    padding: 0.2rem 1rem;
+}
+
+// Navbar
+#navbar {
+    background: $dark-color;
+    color: #fff;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 3;
+    a {
+        color: #fff;
+    }
+    &-logo {
+        width: 60px;
+        height: 50px;
+        margin: 0.5rem 0;
+        margin-left: 1.6rem;
+    }
+    &-menu {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding-right: 1rem;
+        ul {
+            display: flex;
+        }
+        li {
+            margin-right: 3rem;
+            a {
+                transition: border-bottom 0.2s;
+                border-bottom: 3px transparent solid;
+                padding-bottom: 3px;
+                transition: border-color 0.5s;
+                &:hover {
+                    border-color: $lighter-primary-color;
+                }
+                &.current {
+                    border-color: $primary-color;
+                }
+            }
+        }
+        &-user {
+            a {
+                padding: 0.5rem 2rem;
+                margin-left: 1rem;
+            }
+            a:first-child {
+                margin-left: 3rem;
+            }
+        }
+    }
 }
 
 // Header
 #header {
-  height: 100vh;
-  background: url("../img/potential.jpg") no-repeat center center / cover;
-  color: #fff;
-  position: relative;
-
-  &::before {
-    content: "";
-    position: absolute;
-    background: rgb(0, 0, 0);
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0.5;
-  }
-
-  &-a {
+    height: 100vh;
+    background: url("../img/potential.jpg") no-repeat center 65px / cover;
+    color: #fff;
     position: relative;
-    background: $dark-colour;
-    z-index: 1;
-  }
-}
-// Navbar
-#navbar {
-  background: inherit;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  &-logo {
-    width: 60px;
-    height: 50px;
-    margin: 0.5rem 0;
-    margin-left: 1.6rem;
-  }
-
-  &-menu {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-right: 1rem;
-
-    ul {
-      display: flex;
+    top: -66px;
+    margin-bottom: -66px;
+    &::before {
+        content: "";
+        position: absolute;
+        background: rgb(0, 0, 0);
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        opacity: 0.5;
     }
-
-    li {
-      margin-right: 3rem;
-
-      a {
-        transition: border-bottom 0.2s;
-        border-bottom: 3px transparent solid;
-        padding-bottom: 3px;
-        transition: border-color 0.5s;
-
-        &:hover {
-          border-color: #a8575e8c;
-        }
-
-        &.current {
-          border-color: $primary-colour;
-        }
-      }
+    &-a {
+        position: relative;
+        background: $dark-color;
+        z-index: 1;
     }
-
-    &-user {
-      a {
-        padding: 0.5rem 2rem;
-        margin-left: 1rem;
-      }
-
-      a:first-child {
-        margin-left: 3rem;
-      }
-    }
-  }
 }
 
 #showcase {
-  height: 100%;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-
-  &-content {
-    width: 50%;
-    height: 35px;
-    z-index: 1;
-
-    h1 {
-      margin-bottom: 2rem;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    &-content {
+        width: 50%;
+        height: 35px;
+        z-index: 1;
+        h1 {
+            margin-bottom: 2rem;
+        }
+        form {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 0.9rem;
+            input,
+            button {
+                height: 100%;
+            }
+            input {
+                flex: 8;
+            }
+            button {
+                flex: 1;
+                border-radius: 0;
+                padding: 0.5rem 2rem;
+            }
+        }
     }
-
-    form {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-bottom: 0.9rem;
-
-      input,
-      button {
-        height: 100%;
-      }
-
-      input {
-        flex: 8;
-      }
-
-      button {
-        flex: 1;
-        border-radius: 0;
-        padding: 0.5rem 2rem;
-      }
-    }
-  }
 }
 
+// Section: Categories
 #categories {
-  color: #000000;
-  background: $background-colour;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 2rem;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  padding: 1.5rem 2.5rem;
-
-  a {
-    color: inherit;
-  }
-
-  div {
-    padding: 1rem;
-    height: 230px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+    color: #000000;
+    background: $background-color;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 2rem;
+    justify-content: center;
     align-items: center;
-    transition: background 0.4s, transform 0.4s, color 0.5s;
-
-    &:nth-child(odd):hover {
-      background: $secondary-colour;
-      color: #fff;
-      transform: scale(1.05);
+    text-align: center;
+    padding: 1.5rem 2.5rem;
+    a {
+        color: inherit;
     }
-
-    &:nth-child(even):hover {
-      // background: lighten($secondary-colour, 10);
-      // color: #333333;
-      transform: scale(1.05);
+    div {
+        padding: 1rem;
+        height: 230px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        transition: background 0.4s, transform 0.4s, color 0.5s;
+        &:nth-child(odd):hover {
+            background: $primary-color;
+            color: #fff;
+            transform: scale(1.05);
+        }
+        &:nth-child(even):hover {
+            // background: lighten($secondary-color, 10);
+            // color: #333333;
+            transform: scale(1.05);
+        }
+        p {
+            margin: 0.5rem 1rem;
+        }
     }
-
-    p {
-      margin: 0.5rem 1rem;
-    }
-  }
 }
 
 // Footer
 #footer {
-  background: $dark-colour;
-  color: #fff;
-  height: 3.5rem;
-
-  .footer-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100%;
-
-    .social .fab {
-      margin-right: 1rem;
-      border: 2px #fff solid;
-      border-radius: 50%;
-      height: 40px;
-      width: 40px;
-      line-height: 20px;
-      text-align: center;
-      padding: 0.5rem;
-
-      &:hover {
-        background: $primary-colour;
-      }
+    background: $dark-color;
+    color: #fff;
+    height: 3.5rem;
+    .footer-content {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 100%;
+        .social .fab {
+            margin-right: 1rem;
+            border: 2px #fff solid;
+            border-radius: 50%;
+            height: 40px;
+            width: 40px;
+            line-height: 20px;
+            text-align: center;
+            padding: 0.5rem;
+            &:hover {
+                background: $primary-color;
+            }
+        }
     }
-  }
 }
