completed without responsive

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -10,3 +10,5 @@ $max-width: 1280px;
 $font-fam: "Work Sans",
 sans-serif;
 $border-input: 1px solid #d1d5da;
+$box-shadow-main: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+$box-shadow-hover: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
